# extractall

./: .gitignore  LICENSE  README.md  pyproject.toml
extractall/: __main__.py  main.py
extractall/core/: file_manager.py  state_manager.py
extractall/handlers/: base_handler.py  registry.py
extractall/strategies/: multi_tool_strategy.py  multipart_strategy.py  partial_strategy.py
tests/: __init__.py
tests/integration/: test_edge_cases.py
tests/strategies/: test_multi_tool_strategy.py
tests/unit/: test_detection.py  test_file_manager.py  test_state_manager.py
